# protos-ts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  args.rs  build.sh  decode.ts  main.rs  proto.rs  well-known-imports.md
.github/workflows/: npm-publish.yaml
package/: LICENSE  README.md  index.js  package.json
proto/: compiler.rs  error.rs  folder.rs  id_generator.rs  lexems.rs  package.rs  package_tree.rs  proto_scope.rs  protopath.rs  scope.rs  syntax.rs
proto/compiler/: ts.rs
proto/compiler/ts/: ast.rs  block_scope.rs  commit_folder.rs  compile_package.rs  constants.rs  decode_compiler.rs  defined_id.rs  encode_basic_repeated_type_field.rs  encode_basic_type_field.rs  encode_call.rs  encode_compiler.rs  encode_enum_field.rs  encode_map_field.rs  encode_message_expr.rs  encode_user_defined.rs  ensure_import.rs  enum_compiler.rs  file_name_to_folder_name.rs  file_to_folder.rs  get_relative_import.rs  has_property.rs  message_name_to_encode_type_name.rs  package_tree_to_folder.rs  packages_to_folder.rs  protopath.rs  render_file.rs  scope_to_folder.rs  to_js_string.rs  ts_path.rs  types_compiler.rs
proto/proto_scope/: builder.rs  enum_scope.rs  file.rs  message.rs  package.rs  root_scope.rs  traits.rs
proto/proto_scope/builder/: well_known.rs
proto/proto_scope/builder/well_known/: any.rs  duration.rs  empty.rs  field_mask.rs  struct_file.rs  time_type.rs  wrappers.rs
src/: args.rs  main.rs  proto.rs
src/proto/: error.rs  folder.rs  id_generator.rs  lexems.rs  package.rs  proto_scope.rs  protopath.rs  syntax.rs
src/proto/compiler/ts/: ast.rs  commit_folder.rs  constants.rs  encode_basic_repeated_type_field.rs  encode_basic_type_field.rs  (+11 more)
src/proto/proto_scope/: builder.rs  enum_scope.rs  file.rs  package.rs
(+2 files in other folders)
