[package]
name = "proto-ts"
version = "0.1.0"
edition = "2021"
authors = ["Andrii Biletskyi <andrewbeletskiy@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# cargo watch -x 'run -- ./test-folder --out ./out'
# RUSTFLAGS=-Awarnings cargo watch -x 'run -- ./test-folder --out ./out'
# RUST_BACKTRACE=1 RUSTFLAGS=-Awarnings cargo watch -x 'run -- ./test-folder --out ./out'
# ./target/release/proto-ts.exe ./test-folder --out out
# time ./target/release/proto-ts.exe ./test-real --out out


[dependencies]
path-clean = "0.1.0"

[[bin]]
name = "proto-ts"
path = "main.rs"